--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "description": "A quick test with friend; and also to see how this compares. It should work in each...",
+  "description": "A quick test...",
   "type": "module",
   "author": "mattbis",
   "version": "1.0.0",
