--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "description": "mapFilePath: A quick test... library package",
+  "description": "mapFilePath: library package, test, runner, cmd, include",
   "author": "mattbis",
   "version": "1.0.0",
   "name": "mapfilepath.dev",
