--- a/.editorconfig
+++ b/.editorconfig
@@ -1,1 +1,36 @@
+root = true
 
+[*]
+charset = utf-8
+end_of_line = lf
+indent_size = 4
+indent_style = space
+insert_final_newline = true
+trim_trailing_whitespace = true
+
+[*.ts]
+indent_size = 2
+
+[*.js]
+indent_size = 2
+
+[*.mjs]
+indent_size = 2
+
+[*.py]
+indent_size = 4
+
+[*.cpp]
+indent_size = 4
+
+[*.hpp]
+indent_size = 4
+
+[*.rs]
+indent_size = 4
+
+[*.zig]
+indent_size = 4
+
+[*.{json,yaml}]
+indent_size = 2
